create react frontend